tests/phase_3/typeerrors/multiClass.ood
class stmt1 is

  x: int
  start() is
  begin
    x := neg(x)
  end start 

  neg(x: int; x: bool) is
  begin
    neg := -x

  end neg
end stmt1

